--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="appBanner_title">잡코리아파트너스 앱으로 더 간편하게</div>
             <div class="appBanner_desc">채용·운영·보고까지 하나로</div>
           </div>
-          <div class="appBanner_right"><a href="#" class="appBanner_btn">서비스 문의</a></div>
+          <div class="appBanner_right"><a href="#" class="appBanner_btn">채용공고보기</a><a href="#" class="appBanner_btn">서비스 문의</a></div>
         </div>
         </div>
       </div>
@@ -147,7 +147,7 @@
               <a href="#" class="btn-detail">자세히 보기</a>
             </div>
             <div class="img-wrap">
-              <img src="이미지경로.png" alt="플랫폼 화면">
+              <img src="public/images/mainsec03img.png" alt="플랫폼 화면">
             </div>
           </div>
           <div data-pane>
@@ -157,7 +157,7 @@
               <a href="#" class="btn-detail">자세히 보기</a>
             </div>
             <div class="img-wrap">
-              <img src="이미지경로.png" alt="플랫폼 화면">
+              <img src="public/images/mainsec03img.png" alt="플랫폼 화면">
             </div>
           </div>
           <div data-pane>
@@ -167,7 +167,7 @@
               <a href="#" class="btn-detail">자세히 보기</a>
             </div>
             <div class="img-wrap">
-              <img src="이미지경로.png" alt="플랫폼 화면">
+              <img src="public/images/mainsec03img.png" alt="플랫폼 화면">
             </div>
           </div>
           <div data-pane>
@@ -177,7 +177,7 @@
               <a href="#" class="btn-detail">자세히 보기</a>
             </div>
             <div class="img-wrap">
-              <img src="이미지경로.png" alt="플랫폼 화면">
+              <img src="public/images/mainsec03img.png" alt="플랫폼 화면">
             </div>
           </div>
         </div>
@@ -241,48 +241,34 @@
       </div>
     </div>
   </div>
+        
 
-
-      
-
-  <div class="mainSec06-wrapper">
-    <div class="container mainSec06">
-      <div class="mainSec05Tit"><h2>새로운 소식</h2></div>
-      <div class="mainSec05-scroller" data-drag-scroll>
-        <ul class="mainSec05-track">
-          <li class="news-card">
-            <div class="news-thumb"></div>
-            <div class="news-meta">
-              <div class="news-kicker">채용정보</div>
-              <div class="news-title">[잡코리아 본사] KDT 교육 행정운영직 채용</div>
-            </div>
-          </li>
-          <li class="news-card">
-            <div class="news-thumb"></div>
-            <div class="news-meta">
-              <div class="news-kicker">채용정보</div>
-              <div class="news-title">[잡코리아 본사] KDT 교육 행정운영직 채용</div>
-            </div>
-          </li>
-          <li class="news-card">
-            <div class="news-thumb"></div>
-            <div class="news-meta">
-              <div class="news-kicker">채용정보</div>
-              <div class="news-title">[잡코리아 본사] KDT 교육 행정운영직 채용</div>
-            </div>
-          </li>
-          <li class="news-card">
-            <div class="news-thumb"></div>
-            <div class="news-meta">
-              <div class="news-kicker">채용정보</div>
-              <div class="news-title">[잡코리아 본사] KDT 교육 행정운영직 채용</div>
-            </div>
-          </li>
-          <!-- 필요 수량만큼 li 추가 -->
-        </ul>
+<!-- mainSec06 -->
+<div class="mainSec06-wrapper">
+  <div class="container mainSec06">
+    <div class="mainSec07Tit">
+      <h1>기업 맞춤형 서비스</h1>
+    </div>
+    <div class="mainSec06Con">
+      <div class="mainSec06ConLeft">
+        <img src="public/images/mainSec07-left.png" alt="기업 맞춤 서비스 이미지">
+      </div>
+      <div class="mainSec06ConRight">
+        <div class="mainSec06Box arrow">
+          그룹사 소개
+        </div>
+        <div class="mainSec06Box arrow">
+          찾아오시는 길 <span>→</span>
+        </div>
       </div>
     </div>
   </div>
+</div>
+
+
+<div class="footer">
+  
+</div>
 
 </body>
 </html>
